--- a/html/styles.css
+++ b/html/styles.css
@@ -1,5 +1,8 @@
 body{
     background-color: #000000;
+    margin: auto;
+    padding-left: 250px;
+    padding-right: 250px;
 }
 .h1, .welcome, .h6{
     color: white;
@@ -23,4 +26,16 @@ body{
     width: 100%;
     color: white;
     text-align: center;
+
+}
+.row{
+    padding-bottom: 100px;
+    padding-top: 50px;
+    border-bottom: #ffffff 1px solid;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.btnsm{
+    padding-left: 20px;
+    padding-right: 20px;
 }
